5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1064/executions/1592_1800.log
== TEST (2019-04-01 14:38:33) 
-- CODE:
print("aasdfasdfas)
-- ERROR:
File "XXXX", line 1
    print("aasdfasdfas)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:48) 
-- CODE:
print("aasdfasdfas"
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
